<resources>
    <string name="app_name">Auditor</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="nova_foto">Nova Foto</string>
    <string name="remove_photo_menu">Remover Foto</string>
    <string name="photo_title_label">Titulo</string>
    <string name="photo_title_hint">descrição da foto</string>
    <string name="map_photo_list_menu">Mapa</string>
    <string name="upload_photo_list_menu">Upload</string>
    <string name="sign_in">Entrar</string>
    <string name="filter">Filtrar</string>
    <string name="author">Autor</string>
    <string name="bemPublico">Bem Publico</string>
    <string name="contract">Contrato</string>
    <string name="medicao">Medição</string>
    <string name="check_server">Download</string>
    <string name="search">Procurar</string>
    <string name="galerie">Galeria</string>
    <string name="localDB">local DB</string>
    <string name="Download">Download de Fotos</string>
    <string name="exercicio">Exercício</string>
    <string name="municipio">Município</string>
    <string name="jurisdicionado">Jurisdicionado</string>
    <string name="buscar_contratos_btn">Buscar Contratos</string>
    <string name="buscar_benspublicos_btn">Buscar Bens Publicos</string>
    <string name="id">ID</string>
    <string name="numero">Numero</string>
    <string name="prazo">Prazo</string>
    <string name="data_inicio">Início</string>
    <string name="data_fim">Fim</string>
    <string name="bem_publico">Bem Público</string>
    <string name="contratado">Contratado</string>
    <string name="medicao_lista">Medições</string>
    <string name="fetch_medicao_btn">Buscar Medição</string>
    <string name="area">Área</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="tipo">Tipo</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="contrato_lista">Contratos</string>
    <string name="buscar_contrato_btn">Buscar Contrato</string>
    <string name="contrato_id">ID Contrato</string>
    <string name="done">OK</string>
    <string name="cancel">CANCELAR</string>
    <string name="apply_context">Associar contexto</string>
</resources>
