<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_photos"
        android:icon="@drawable/ic_filter_photos"
        android:title="@string/filter"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/map_photo"
        android:icon="@drawable/ic_show_map"
        android:title="@string/map_photo_list_menu"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/upload_photos"
        android:icon="@drawable/ic_upload_photo"
        android:title="@string/upload_photo_list_menu"
        app:showAsAction="never"/>

    <item
        android:id="@+id/apply_context"
        android:title="@string/apply_context"
        app:showAsAction="never"/>

</menu>