<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_cancel"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/cancel"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/ic_done"
        android:icon="@drawable/ic_search_done"
        android:title="@string/done"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/download_photos"
        android:icon="@drawable/ic_check_new_photos_on_server"
        android:title="@string/check_server"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/download_list"
        android:title="@string/Download"
        app:showAsAction="never"/>

</menu>