<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_photo"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/new_photo_list_menu"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/map_photo"
        android:icon="@drawable/ic_show_map"
        android:title="@string/map_photo_list_menu"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/upload_photo"
        android:icon="@drawable/ic_upload_photo"
        android:title="@string/upload_photo_list_menu"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/check_new_photos_on_server"
        android:icon="@drawable/ic_check_new_photos_on_server"
        android:title="@string/check_server"
        app:showAsAction="withText"/>

</menu>