<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/filterGuide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.052083332" />

    <TextView
        android:id="@+id/filterBemPublico_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bemPublico"
        app:layout_constraintStart_toStartOf="@+id/filterGuide1"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/filterBemPublico_SPN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/filterGuide2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterContrato_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/contract"
        app:layout_constraintStart_toStartOf="@+id/filterGuide1"
        app:layout_constraintTop_toBottomOf="@+id/filterBemPublico_TV" />

    <Spinner
        android:id="@+id/filterContrato_SPN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/filterGuide2"
        app:layout_constraintTop_toBottomOf="@+id/filterBemPublico_SPN" />

    <TextView
        android:id="@+id/filterMedicao_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/medicao"
        app:layout_constraintStart_toStartOf="@+id/filterGuide1"
        app:layout_constraintTop_toBottomOf="@+id/filterContrato_TV" />

    <Spinner
        android:id="@+id/filterMedicao_SPN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/filterGuide2"
        app:layout_constraintTop_toBottomOf="@+id/filterContrato_SPN" />

    <android.support.constraint.Guideline
        android:id="@+id/filterGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</android.support.constraint.ConstraintLayout>